Bug 1483058 - [Mac] Camera not accessible by Adobe Flash applets r=Alex_Gaynor a=lizzard

Allow access to services needed for the Flash plugin to access cameras.

Differential Revision: https://phabricator.services.mozilla.com/D3357